docs/examples/neko/eks/neko-local.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: neko
  labels:
    app: neko
spec:
  replicas: 1
  selector:
    matchLabels:
      app: neko
  template:
    metadata:
      labels:
        app: neko
    spec:
      containers:
      - name: neko
        image: m1k1o/neko:firefox
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        - name: udp-one
          containerPort: 62001
          protocol: UDP
        - name: udp-two
          containerPort: 62002
          protocol: UDP
---
apiVersion: v1
kind: Service
metadata:
  name: neko-tcp
  labels:
    run: neko-tcp
spec:
  ports:
  - port: 8080
    protocol: TCP
  selector:
    app: neko
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: neko-udp
  labels:
    app: neko-udp
spec:
  ports:
  - port: 62001
    protocol: UDP
    name: udp-one
  - port: 62002
    protocol: UDP
    name: udp-two
  selector:
    app: neko
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: neko-ingress
spec:
  #ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: neko-tcp
            port:
              number: 8080
